@@ -10,6 +10,7 @@ x.x:
 - fixed: error in subsite profile field configuration
 - fixed: wrong handling of metastring based objects hook
 - fixed: page owner not found in Tidypics
+- fixed: cleanup of all membership requests on accept/decline
 
 2.1 (2013-04-05):
 - changed: made compatible with Elgg 1.8.14
